--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           bash build-start.sh stable clang
           cd kernel
           mkdir kernel-done
+          rm build-dtb.sh
+          rm build.sh
           wget https://raw.githubusercontent.com/cari-404/SRyzen-CAF/caf/build-dtb.sh
           bash build-dtb.sh tulip clang qpnp
           git apply qti.patch
