--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           cd kernel
           mkdir kernel-done
           wget https://raw.githubusercontent.com/cari-404/SRyzen-CAF/caf/build-dtb.sh
-          curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s v0.6.0
+          curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
           bash build-dtb.sh tulip clang qpnp
           git apply qti.patch
           bash build-dtb.sh tulip clang qti
