--- a/arch/arm64/configs/super-tulip-oldcam_defconfig
+++ b/arch/arm64/configs/super-tulip-oldcam_defconfig
@@ -4169,7 +4169,7 @@ CONFIG_MSM_SPSS_UTILS=y
 CONFIG_MSM_SMP2P=y
 # CONFIG_MSM_SMP2P_TEST is not set
 CONFIG_MSM_QMI_INTERFACE=y
-
+# CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 # CONFIG_QCOM_GSBI is not set
@@ -4188,7 +4188,7 @@ CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
 # CONFIG_QCOM_EARLY_DOMAIN is not set
 # CONFIG_QCOM_SCM_XPU is not set
-
+# CONFIG_QCOM_SCM_ERRATA is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_IRQ_HELPER=y
 # CONFIG_QCOM_MEMORY_DUMP is not set
@@ -4784,7 +4784,7 @@ CONFIG_FRAME_WARN=0
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 # CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
